--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* ======================================================
 * Name : Rotaract Club of Navi Mumbai Industrial Area
-* Template URL: https://ronmia.com/
+* URL: https://ronmia.com/
 * Author: Smaran Ummadishetty
 * Contact : +91 96199 47506
 * Email : smaran.ummadishetty@gmail.com 
@@ -707,60 +707,6 @@ section {
 # About
 --------------------------------------------------------------*/
 
-.breadcrumbs {
-    padding: 15px 0;
-    background: #1d1b16;
-    margin-top: 110px;
-}
-
-@media (max-width: 992px) {
-    .breadcrumbs {
-        margin-top: 98px;
-    }
-}
-
-.breadcrumbs h2 {
-    font-size: 26px;
-    font-weight: 300;
-}
-
-.breadcrumbs ol {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-size: 14px;
-}
-
-.breadcrumbs ol li+li {
-    padding-left: 10px;
-}
-
-.breadcrumbs ol li+li::before {
-    display: inline-block;
-    padding-right: 10px;
-    color: #37332a;
-    content: "/";
-}
-
-@media (max-width: 768px) {
-    .breadcrumbs .d-flex {
-        display: block !important;
-    }
-    .breadcrumbs ol {
-        display: block;
-    }
-    .breadcrumbs ol li {
-        display: inline-block;
-    }
-}
-
-
-/*--------------------------------------------------------------
-# About
---------------------------------------------------------------*/
-
 .about {
     background: url("../img/background.jpg") center center;
     background-size: cover;
@@ -857,149 +803,6 @@ section {
     .about {
         background-attachment: fixed;
     }
-}
-
-
-/*--------------------------------------------------------------
-# Why Us
---------------------------------------------------------------*/
-
-.why-us .box {
-    padding: 50px 30px;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    transition: all ease-in-out 0.3s;
-    background: #1a1814;
-}
-
-.why-us .box span {
-    display: block;
-    font-size: 28px;
-    font-weight: 700;
-    color: #cda45e;
-}
-
-.why-us .box h4 {
-    font-size: 24px;
-    font-weight: 600;
-    padding: 0;
-    margin: 20px 0;
-    color: rgba(255, 255, 255, 0.8);
-}
-
-.why-us .box p {
-    color: #aaaaaa;
-    font-size: 15px;
-    margin: 0;
-    padding: 0;
-}
-
-.why-us .box:hover {
-    background: #cda45e;
-    padding: 30px 30px 70px 30px;
-    box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
-}
-
-.why-us .box:hover span,
-.why-us .box:hover h4,
-.why-us .box:hover p {
-    color: #fff;
-}
-
-
-/*--------------------------------------------------------------
-# Menu Section
---------------------------------------------------------------*/
-
-.menu #menu-flters {
-    padding: 0;
-    margin: 0 auto 0 auto;
-    list-style: none;
-    text-align: center;
-    border-radius: 50px;
-}
-
-.menu #menu-flters li {
-    cursor: pointer;
-    display: inline-block;
-    padding: 8px 12px 10px 12px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1;
-    color: #fff;
-    margin-bottom: 10px;
-    transition: all ease-in-out 0.3s;
-    border-radius: 50px;
-    font-family: "Playfair Display", serif;
-}
-
-.menu #menu-flters li:hover,
-.menu #menu-flters li.filter-active {
-    color: #cda45e;
-}
-
-.menu #menu-flters li:last-child {
-    margin-right: 0;
-}
-
-.menu .menu-item {
-    margin-top: 50px;
-}
-
-.menu .menu-img {
-    width: 70px;
-    border-radius: 50%;
-    float: left;
-    border: 5px solid rgba(255, 255, 255, 0.2);
-}
-
-.menu .menu-content {
-    margin-left: 85px;
-    overflow: hidden;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-}
-
-.menu .menu-content::after {
-    content: "......................................................................" "...................................................................." "....................................................................";
-    position: absolute;
-    left: 20px;
-    right: 0;
-    top: -4px;
-    z-index: 1;
-    color: #bab3a6;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-
-.menu .menu-content a {
-    padding-right: 10px;
-    background: #1a1814;
-    position: relative;
-    z-index: 3;
-    font-weight: 700;
-    color: white;
-    transition: 0.3s;
-}
-
-.menu .menu-content a:hover {
-    color: #cda45e;
-}
-
-.menu .menu-content span {
-    background: #1a1814;
-    position: relative;
-    z-index: 3;
-    padding: 0 10px;
-    font-weight: 600;
-    color: #cda45e;
-}
-
-.menu .menu-ingredients {
-    margin-left: 85px;
-    font-style: italic;
-    font-size: 14px;
-    font-family: "Poppins", sans-serif;
-    color: rgba(255, 255, 255, 0.5);
 }
 
 
@@ -1165,114 +968,6 @@ section {
 
 
 /*--------------------------------------------------------------
-# Book A Table
---------------------------------------------------------------*/
-
-.book-a-table .php-email-form {
-    width: 100%;
-}
-
-.book-a-table .php-email-form .form-group {
-    padding-bottom: 8px;
-}
-
-.book-a-table .php-email-form .validate {
-    display: none;
-    color: red;
-    margin: 0 0 15px 0;
-    font-weight: 400;
-    font-size: 13px;
-}
-
-.book-a-table .php-email-form .error-message {
-    display: none;
-    color: #fff;
-    background: #ed3c0d;
-    text-align: left;
-    padding: 15px;
-    font-weight: 600;
-}
-
-.book-a-table .php-email-form .error-message br+br {
-    margin-top: 25px;
-}
-
-.book-a-table .php-email-form .sent-message {
-    display: none;
-    color: #fff;
-    background: #18d26e;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-}
-
-.book-a-table .php-email-form .loading {
-    display: none;
-    text-align: center;
-    padding: 15px;
-}
-
-.book-a-table .php-email-form .loading:before {
-    content: "";
-    display: inline-block;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    margin: 0 10px -6px 0;
-    border: 3px solid #cda45e;
-    border-top-color: #1a1814;
-    -webkit-animation: animate-loading 1s linear infinite;
-    animation: animate-loading 1s linear infinite;
-}
-
-.book-a-table .php-email-form input,
-.book-a-table .php-email-form textarea {
-    border-radius: 0;
-    box-shadow: none;
-    font-size: 14px;
-    background: #0c0b09;
-    border-color: #625b4b;
-    color: white;
-}
-
-.book-a-table .php-email-form input::-moz-placeholder,
-.book-a-table .php-email-form textarea::-moz-placeholder {
-    color: #a49b89;
-}
-
-.book-a-table .php-email-form input::placeholder,
-.book-a-table .php-email-form textarea::placeholder {
-    color: #a49b89;
-}
-
-.book-a-table .php-email-form input:focus,
-.book-a-table .php-email-form textarea:focus {
-    border-color: #cda45e;
-}
-
-.book-a-table .php-email-form input {
-    height: 44px;
-}
-
-.book-a-table .php-email-form textarea {
-    padding: 10px 12px;
-}
-
-.book-a-table .php-email-form button[type="submit"] {
-    background: #cda45e;
-    border: 0;
-    padding: 10px 35px;
-    color: #fff;
-    transition: 0.4s;
-    border-radius: 50px;
-}
-
-.book-a-table .php-email-form button[type="submit"]:hover {
-    background: #d3af71;
-}
-
-
-/*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
 
@@ -1371,93 +1066,6 @@ section {
 
 .gallery .gallery-item:hover img {
     transform: scale(1.1);
-}
-
-
-/*--------------------------------------------------------------
-# Chefs
---------------------------------------------------------------*/
-
-.chefs .member {
-    text-align: center;
-    margin-bottom: 20px;
-    background: #343a40;
-    position: relative;
-    overflow: hidden;
-}
-
-.chefs .member .member-info {
-    opacity: 0;
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    transition: 0.2s;
-}
-
-.chefs .member .member-info-content {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 10px;
-    transition: bottom 0.4s;
-}
-
-.chefs .member .member-info-content h4 {
-    font-weight: 700;
-    margin-bottom: 2px;
-    font-size: 18px;
-    color: #fff;
-}
-
-.chefs .member .member-info-content span {
-    font-style: italic;
-    display: block;
-    font-size: 13px;
-    color: #fff;
-}
-
-.chefs .member .social {
-    position: absolute;
-    left: 0;
-    bottom: -38px;
-    right: 0;
-    height: 48px;
-    transition: bottom ease-in-out 0.4s;
-    text-align: center;
-}
-
-.chefs .member .social a {
-    transition: color 0.3s;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-}
-
-.chefs .member .social a:hover {
-    color: #cda45e;
-}
-
-.chefs .member .social i {
-    font-size: 18px;
-    margin: 0 2px;
-}
-
-.chefs .member:hover .member-info {
-    background: linear-gradient( 0deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.8) 20%, rgba(0, 212, 255, 0) 100%);
-    opacity: 1;
-    transition: 0.4s;
-}
-
-.chefs .member:hover .member-info-content {
-    bottom: 60px;
-    transition: bottom 0.4s;
-}
-
-.chefs .member:hover .social {
-    bottom: 0;
-    transition: bottom ease-in-out 0.4s;
 }
 
 
@@ -1630,138 +1238,6 @@ section {
     padding: 0 0 30px 0;
     color: #fff;
     font-size: 14px;
-}
-
-#footer .footer-top {
-    background: #0c0b09;
-    border-top: 1px solid #37332a;
-    border-bottom: 1px solid #28251f;
-    padding: 60px 0 30px 0;
-}
-
-#footer .footer-top .footer-info {
-    margin-bottom: 30px;
-}
-
-#footer .footer-top .footer-info h3 {
-    font-size: 24px;
-    margin: 0 0 20px 0;
-    padding: 2px 0 2px 0;
-    line-height: 1;
-    font-weight: 300;
-    text-transform: uppercase;
-    font-family: "Poppins", sans-serif;
-}
-
-#footer .footer-top .footer-info p {
-    font-size: 14px;
-    line-height: 24px;
-    margin-bottom: 0;
-    font-family: "Playfair Display", serif;
-    color: #fff;
-}
-
-#footer .footer-top .social-links a {
-    font-size: 18px;
-    display: inline-block;
-    background: #28251f;
-    color: #fff;
-    line-height: 1;
-    padding: 8px 0;
-    margin-right: 4px;
-    border-radius: 50%;
-    text-align: center;
-    width: 36px;
-    height: 36px;
-    transition: 0.3s;
-}
-
-#footer .footer-top .social-links a:hover {
-    background: #cda45e;
-    color: #fff;
-    text-decoration: none;
-}
-
-#footer .footer-top h4 {
-    font-size: 16px;
-    font-weight: 600;
-    color: #fff;
-    position: relative;
-    padding-bottom: 12px;
-}
-
-#footer .footer-top .footer-links {
-    margin-bottom: 30px;
-}
-
-#footer .footer-top .footer-links ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-#footer .footer-top .footer-links ul i {
-    padding-right: 2px;
-    color: #cda45e;
-    font-size: 18px;
-    line-height: 1;
-}
-
-#footer .footer-top .footer-links ul li {
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
-}
-
-#footer .footer-top .footer-links ul li:first-child {
-    padding-top: 0;
-}
-
-#footer .footer-top .footer-links ul a {
-    color: #fff;
-    transition: 0.3s;
-    display: inline-block;
-    line-height: 1;
-}
-
-#footer .footer-top .footer-links ul a:hover {
-    color: #cda45e;
-}
-
-#footer .footer-top .footer-newsletter form {
-    margin-top: 30px;
-    background: #28251f;
-    padding: 6px 10px;
-    position: relative;
-    border-radius: 50px;
-    border: 1px solid #454035;
-}
-
-#footer .footer-top .footer-newsletter form input[type="email"] {
-    border: 0;
-    padding: 4px;
-    width: calc(100% - 110px);
-    background: #28251f;
-    color: white;
-}
-
-#footer .footer-top .footer-newsletter form input[type="submit"] {
-    position: absolute;
-    top: -1px;
-    right: -1px;
-    bottom: -1px;
-    border: 0;
-    background: none;
-    font-size: 16px;
-    padding: 0 20px 2px 20px;
-    background: #cda45e;
-    color: #fff;
-    transition: 0.3s;
-    border-radius: 50px;
-}
-
-#footer .footer-top .footer-newsletter form input[type="submit"]:hover {
-    background: #d3af71;
 }
 
 #footer .copyright {
