update :up: social media links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1240,6 +1240,27 @@ section {
     font-size: 14px;
 }
 
+.social-links a {
+    font-size: 18px;
+    display: inline-block;
+    background: #28251f;
+    color: #fff;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s;
+}
+
+.social-links a:hover {
+    background: #cda45e;
+    color: #fff;
+    text-decoration: none;
+}
+
 #footer .copyright {
     text-align: center;
     padding-top: 30px;
